<resources>
    <string name="app_name">AСomics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="updates">Обновления</string>
    <string name="next">Следующие</string>
    <string name="popular">Популярно</string>
    <string name="news">Новости</string>
    <string name="name">Название</string>
    <string name="stopper">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore manga aliqua…</string>
    <string name="catalog">Каталог</string>
    <string name="link_with">Связано с:</string>
    <string name="none">None</string>
    <string name="chats">Чаты</string>
    <string name="message">Сообщение…</string>
    <string name="no_date">NNNN</string>
    <string name="info">Информация</string>
    <string name="chapters">Главы</string>
    <string name="discussions">Обсуждения</string>
    <string name="tags">Теги:</string>
    <string name="authors">Авторы:</string>
    <string name="similar">Похожие</string>
    <string name="chapter">Глава NN: Nnnn</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="none_aсcount">Нет аккаунта?</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="login">Вход</string>
    <string name="email">Почта</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="save">Сохранить</string>
    <string name="post">Должность</string>
    <string name="change_password">Изменить пароль</string>
    <string name="about_me">О себе</string>
    <string name="change_avatar">Нажмите для смены аватара</string>
    <string name="confrim_email">Подтверждение почты</string>
    <string name="confrim_message">Мы отправили письмо для подтверждения на вашу почту. Пожалуйста, введите код подтверждения.</string>
    <string name="confrim_code">Код подтверждения</string>
    <string name="confrim">Подтвердить</string>
    <string name="send_code_again">Отправить код повторно</string>
    <string name="present_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confrim_new_password">Подтвердите новый пароль</string>
    <string name="genres">Жанры:</string>
    <string name="enter_message">Введите сообщение…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_or_email">Имя пользователя или почта</string>
    <string name="open_profile_menu">Открыть меню профиля</string>
    <string name="read">Читать</string>
</resources>