<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragments.LoginFragment">

    <!-- Login Screen -->
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_back"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_aсcount"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/grey"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <!-- Register Screen -->
    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_back"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/editTextUsernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/editTextConfirmPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <!-- Forgot Password Screen -->
    <LinearLayout
        android:id="@+id/forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_back"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <!-- Confirm Email Screen -->
    <LinearLayout
        android:id="@+id/confirm_email_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_back"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confrim_email"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textViewConfirmationMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confrim_message"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editTextConfirmationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confrim_code"
            android:inputType="number"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/buttonConfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confrim"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textViewResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code_again"
            android:textColor="@color/grey"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <!-- Change Password Screen -->
    <LinearLayout
        android:id="@+id/change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_back"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/present_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <EditText
            android:id="@+id/editTextConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confrim_new_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"/>

        <Button
            android:id="@+id/buttonChangePasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</FrameLayout>