<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.NewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/d_ccmonologous"
                android:text="@string/news"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button_more_news"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:layout_gravity="right"
                android:background="@drawable/icon_sort"
                android:visibility="invisible"/>
        </FrameLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/separator"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="362dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_rectangle">
                    <TextView
                        android:id="@+id/n_textname1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/name"
                        android:fontFamily="@font/v_ccwildwordslower"/>
                    <TextView
                        android:id="@+id/n_text1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="20dp"
                        android:textSize="12sp"
                        android:textColor="@color/lite_black"
                        android:text="@string/stopper"
                        android:fontFamily="@font/v_ccwildwordslower"/>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>